--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,7 @@
 baseURL: "lustrous-clafoutis-0b6e4b.netlify.app"
 languageCode: en-us
 title: DevMod
+paginate: 5
 theme: PaperMod
 
 enableRobotsTXT: true
@@ -14,7 +15,7 @@ minify:
   disableXML: true
   minifyOutput: true
 
-  params:
+params:
   env: production # to enable google analytics, opengraph, twitter-cards and schema.
   title: ExampleSite
   description: "ExampleSite description"
