--- a/config.yml
+++ b/config.yml
@@ -4,25 +4,26 @@ title: DevMod
 theme: PaperMod
 
 params:
-    profileMode:
-        enabled: true
-        title: "<Title>" # optional default will be site title
-        subtitle: "This is subtitle"
-        imageUrl: "<image link>" # optional
-        imageTitle: "<title of image as alt>" # optional
-        imageWidth: 120 # custom size
-        imageHeight: 120 # custom size
-        buttons:
-            - name: Archive
-            url: "/archive"
-            - name: Github
-            url: "https://github.com/"
-
-    socialIcons: # optional
-        - name: "<platform>"
-            url: "<link>"
-        - name: "<platform 2>"
-            url: "<link2>"
+  profileMode:
+  enabled: true
+      title: "<Title>" # optional default will be site title
+      subtitle: "This is subtitle"
+      imageUrl: "<image link>" # optional
+      imageTitle: "<title of image as alt>" # optional
+      imageWidth: 120 # custom size
+      imageHeight: 120 # custom size
+      buttons:
+        - name: Archive
+        url: "/archive"
+        - name: Github
+        url: "https://github.com/"
+  socialIcons:
+    - name: vk
+      url: "https://vk.com/"
+    - name: twitter
+      url: "https://twitter.com/"
+    - name: github
+      url: "https://github.com/"
 
   cover:
     linkFullImages: true
