--- a/config.yml
+++ b/config.yml
@@ -5,11 +5,11 @@ theme: PaperMod
 
 params:
   profileMode:
-  enabled: true
+    enabled: true
     title: "DevMod" # optional default will be site title
     subtitle: "This is subtitle"
-    imageUrl: "" # optional
-    imageTitle: "" # optional
+    imageUrl: "<image link>" # optional
+    imageTitle: "<title of image as alt>" # optional
     imageWidth: 120 # custom size
     imageHeight: 120 # custom size
     buttons:
@@ -18,8 +18,8 @@ params:
       - name: Github
       url: "https://github.com/"
   socialIcons:
-    - name: vk
-      url: "https://vk.com/"
+    - name: facebook
+      url: "https://facebook.com/"
     - name: twitter
       url: "https://twitter.com/"
     - name: github
